--- a/index.html
+++ b/index.html
@@ -15,23 +15,57 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto my-5">
-                <h1 class="mb-5 text-center">Sign Up Form</h1>
+                <h3 class="mb-3 text-center">Sign Up</h3>
                 <form>
                     <div class="mb-3">
-                        <label for="fullName" class="form-label">Full Name:</label>
-                        <input type="text" id="fullName" class="form-control" placeholder="Enter your full name">
+                        <label for="fullName" class="form-label">Full Name</label>
+                        <input type="text" id="fullName" class="form-control" placeholder="Enter your full name" required>
                     </div>
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email:</label>
-                        <input type="text" id="email" class="form-control" placeholder="Enter your email">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="text" id="email" class="form-control" placeholder="Enter your email" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Password:</label>
-                        <input type="text" id="password" class="form-control" placeholder="Enter your password">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="text" id="password" class="form-control" placeholder="Enter your password" required>
                     </div>
                     <div class="mb-3">
-                        <label for="confirmPassword" class="form-label">Confirm Password:</label>
-                        <input type="text" id="confirmPassword" class="form-control" placeholder="Confirm your password">
+                        <label for="confirmPassword" class="form-label">Confirm Password</label>
+                        <input type="text" id="confirmPassword" class="form-control" placeholder="Confirm your password" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="selectCountry" class="form-label">Country</label>
+                        <select name="country" class="form-select" id="selectCountry" required>
+                            <option selected>Choose...</option>
+                            <option value="Singapore">Singapore</option>
+                            <option value="Malaysia">Malaysia</option>
+                            <option value="Switzerland">Switzerland</option>
+                            <option value="India">India</option>
+                            <option value="Mexico">Mexico</option>
+                            <option value="Canada">Canada</option>
+                        </select>
+                    </div>
+                    <label for="">Gender</label>
+                    <div class="mb-3 d-flex flex-row">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="genderRadio" id="genderRadioM" required>
+                            <label class="form-check-label" for="genderRadioM">Male</label>
+                        </div>
+                        <div class="form-check mx-3">
+                            <input class="form-check-input" type="radio" name="genderRadio" id="genderRadioM" required>
+                            <label class="form-check-label" for="genderRadioM">Female</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="genderRadio" id="genderRadioM" required>
+                            <label class="form-check-label" for="genderRadioM">Other</label>
+                        </div>
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input class="form-check-input" type="checkbox" name="termNconditions" id="agreeToTerms" required>
+                        <label for="agreeToTerms">I agree to Terms and Conditions</label>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary" type="submit">Sign Up</button>
                     </div>
                 </form>
             </div>
